--- a/gnome-base/control-center/ChangeLog
+++ b/gnome-base/control-center/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/control-center
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.270 2008/05/24 12:29:14 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/control-center/Attic/ChangeLog,v 1.271 2008/05/31 11:42:56 eva Exp $
+
+*control-center-2.22.2.1 (31 May 2008)
+
+  31 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  +control-center-2.22.2.1.ebuild:
+  New version for GNOME-2.22.2. Updated translations.
 
   24 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
   control-center-2.22.1.ebuild:
