--- a/sys-cluster/openmpi/ChangeLog
+++ b/sys-cluster/openmpi/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-cluster/openmpi
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.20 2008/05/30 18:16:17 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-cluster/cvs-repo/gentoo-x86/sys-cluster/openmpi/ChangeLog,v 1.21 2008/05/31 13:47:54 opfer Exp $
+
+  31 May 2008; Christian Faulhammer <opfer@gentoo.org> openmpi-1.2.6.ebuild:
+  stable x86, bug 224099
 
   30 May 2008; Markus Rothe <corsair@gentoo.org> openmpi-1.2.6.ebuild:
   Stable on ppc64; bug #224099
