--- a/app-crypt/openssl-blacklist/ChangeLog
+++ b/app-crypt/openssl-blacklist/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-crypt/openssl-blacklist
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/openssl-blacklist/ChangeLog,v 1.3 2008/05/26 22:40:11 hanno Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/openssl-blacklist/ChangeLog,v 1.4 2008/05/31 14:51:30 aballier Exp $
+
+  31 May 2008; Alexis Ballier <aballier@gentoo.org>
+  openssl-blacklist-0.3.ebuild:
+  keyword ~x86-fbsd
 
 *openssl-blacklist-0.3 (26 May 2008)
 
