--- a/x11-misc/qcomicbook/ChangeLog
+++ b/x11-misc/qcomicbook/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/qcomicbook
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/qcomicbook/ChangeLog,v 1.18 2008/01/09 08:33:34 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/qcomicbook/ChangeLog,v 1.19 2008/05/31 15:56:14 yngwin Exp $
+
+  31 May 2008; Ben de Groot <yngwin@gentoo.org> qcomicbook-0.4.0.ebuild:
+  Updating deps for split qt4. Applying patch from bug 214154.
 
   09 Jan 2008; Krzysiek Pawlik <nelchael@gentoo.org>
   qcomicbook-0.4.0.ebuild:
