--- a/app-arch/rpm/ChangeLog
+++ b/app-arch/rpm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/rpm/ChangeLog,v 1.90 2008/05/20 07:44:25 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/rpm/ChangeLog,v 1.91 2008/05/31 16:18:57 loki_val Exp $
+
+*rpm-4.4.6-r6 (31 May 2008)
+
+  31 May 2008; Peter Alfredsen <loki_val@gentoo.org> +rpm-4.4.6-r6.ebuild:
+  Version bump for >=sys-libs/db-4 wrt bug 218489
 
 *rpm-4.4.7-r4 (20 May 2008)
 *rpm-4.4.6-r5 (20 May 2008)
