--- a/media-plugins/libvisual-projectm/ChangeLog
+++ b/media-plugins/libvisual-projectm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/libvisual-projectm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/libvisual-projectm/ChangeLog,v 1.5 2008/05/31 17:03:19 aballier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/libvisual-projectm/ChangeLog,v 1.6 2008/05/31 17:05:41 aballier Exp $
+
+  31 May 2008; Alexis Ballier <aballier@gentoo.org>
+  libvisual-projectm-1.1.ebuild:
+  declare empty IUSE, bug #224369
 
   31 May 2008; Alexis Ballier <aballier@gentoo.org>
   -libvisual-projectm-0.99.ebuild, -libvisual-projectm-1.0.ebuild:
