--- a/dev-scheme/ikarus/ChangeLog
+++ b/dev-scheme/ikarus/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-scheme/ikarus
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/ikarus/ChangeLog,v 1.1 2008/05/31 21:17:57 pchrist Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-scheme/cvs-repo/gentoo-x86/dev-scheme/ikarus/ChangeLog,v 1.2 2008/06/01 18:03:13 pchrist Exp $
+
+  01 Jun 2008; Panagiotis Christopoulos <pchrist@gentoo.org>
+  ikarus-0.0.3.ebuild:
+  Making DESCRIPTION a bit smaller.
 
 *ikarus-0.0.3 (31 May 2008)
 
