--- a/media-plugins/vdr-pvrinput/ChangeLog
+++ b/media-plugins/vdr-pvrinput/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/vdr-pvrinput
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-pvrinput/ChangeLog,v 1.13 2008/04/28 11:15:52 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-pvrinput/ChangeLog,v 1.14 2008/06/01 18:38:39 zzam Exp $
+
+*vdr-pvrinput-1.0.0.20080601 (01 Jun 2008)
+
+  01 Jun 2008; Matthias Schwarzott <zzam@gentoo.org>
+  +vdr-pvrinput-1.0.0.20080601.ebuild:
+  Version bumped.
 
   28 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
   vdr-pvrinput-1.0.0.20070523.ebuild:
