--- a/media-plugins/vdr-pvr350/ChangeLog
+++ b/media-plugins/vdr-pvr350/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/vdr-pvr350
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-pvr350/ChangeLog,v 1.10 2008/04/28 09:11:33 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-pvr350/ChangeLog,v 1.11 2008/06/02 05:17:33 zzam Exp $
+
+*vdr-pvr350-2008.05.30 (02 Jun 2008)
+
+  02 Jun 2008; Matthias Schwarzott <zzam@gentoo.org>
+  +vdr-pvr350-2008.05.30.ebuild:
+  Version bumped.
 
   28 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
   vdr-pvr350-0.0.4.20070807.ebuild:
