--- a/app-emulation/wine/ChangeLog
+++ b/app-emulation/wine/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/wine/ChangeLog,v 1.215 2008/05/30 21:05:09 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/wine/ChangeLog,v 1.216 2008/06/02 15:26:53 vapier Exp $
+
+  02 Jun 2008; Mike Frysinger <vapier@gentoo.org>
+  +files/wine-1.0_rc3-openssl.patch, wine-1.0_rc3.ebuild:
+  Add fix from upstream for building with newer openssl #224049.
 
 *wine-1.0_rc3 (30 May 2008)
 
