--- a/app-arch/file-roller/ChangeLog
+++ b/app-arch/file-roller/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-arch/file-roller
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.233 2008/04/11 15:54:42 eva Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/file-roller/ChangeLog,v 1.234 2008/06/02 17:14:58 leio Exp $
+
+*file-roller-2.22.3 (02 Jun 2008)
+
+  02 Jun 2008; Mart Raudsepp <leio@gentoo.org> +file-roller-2.22.3.ebuild:
+  Version bump, fixes exclamation mark in RAR passwords, possible blurryness
+  in panel launcher, and other fixes
 
 *file-roller-2.22.2 (11 Apr 2008)
 
