--- a/media-fonts/dejavu/ChangeLog
+++ b/media-fonts/dejavu/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.112 2008/06/01 21:28:00 loki_val Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.113 2008/06/04 09:13:50 corsair Exp $
+
+  04 Jun 2008; Markus Rothe <corsair@gentoo.org> dejavu-2.25-r1.ebuild:
+  Added ~ppc64; bug #224541
 
 *dejavu-2.25-r1 (01 Jun 2008)
 
