--- a/dev-lang/cfortran/ChangeLog
+++ b/dev-lang/cfortran/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/cfortran
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/cfortran/ChangeLog,v 1.7 2008/06/02 08:14:54 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-lang/cvs-repo/gentoo-x86/dev-lang/cfortran/ChangeLog,v 1.8 2008/06/04 09:20:34 corsair Exp $
+
+  04 Jun 2008; Markus Rothe <corsair@gentoo.org> cfortran-4.4-r1.ebuild:
+  Added ~ppc64; bug #224583
 
 *cfortran-4.4-r1 (02 Jun 2008)
 
