--- a/x11-libs/gtk+/ChangeLog
+++ b/x11-libs/gtk+/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/gtk+
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.381 2008/06/04 09:07:52 cla Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.382 2008/06/04 09:32:12 corsair Exp $
+
+  04 Jun 2008; Markus Rothe <corsair@gentoo.org> gtk+-2.12.9-r2.ebuild:
+  Stable on ppc64; bug #224817
 
   04 Jun 2008; Dawid Węgliński <cla@gentoo.org> gtk+-2.12.9-r2.ebuild:
   Stable on x86 (bug #224817)
