--- a/mail-mta/courier/ChangeLog
+++ b/mail-mta/courier/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/courier
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.106 2008/06/02 13:28:47 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/courier/ChangeLog,v 1.107 2008/06/04 12:15:42 cla Exp $
+
+  04 Jun 2008; Dawid Węgliński <cla@gentoo.org> courier-0.59.0.ebuild:
+  Stable on x86/amd64 (bug #223767)
 
   02 Jun 2008; Jeroen Roovers <jer@gentoo.org> courier-0.59.0.ebuild:
   Stable for HPPA (bug #223767).
