--- a/net-misc/portfwd/ChangeLog
+++ b/net-misc/portfwd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/portfwd
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/portfwd/ChangeLog,v 1.22 2008/04/21 18:03:22 phreak Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/portfwd/ChangeLog,v 1.23 2008/06/04 17:25:02 flameeyes Exp $
+
+  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> portfwd-0.28.ebuild:
+  Use eautoreconf, not the bootstrap script.
 
   21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
   Fix up metadata.xml. If there's no maintainer for the package, the metadata
