--- a/media-plugins/vdr-osdteletext/ChangeLog
+++ b/media-plugins/vdr-osdteletext/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for media-plugins/vdr-osdteletext
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-osdteletext/ChangeLog,v 1.11 2008/04/28 09:00:41 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-osdteletext/ChangeLog,v 1.12 2008/06/04 20:26:13 zzam Exp $
+
+*vdr-osdteletext-0.5.1-r2 (04 Jun 2008)
+
+  04 Jun 2008; Matthias Schwarzott <zzam@gentoo.org>
+  +files/vdr-osdteletext-0.5.1-actdevice.diff,
+  +vdr-osdteletext-0.5.1-r2.ebuild:
+  Added patch to solve zapping problem from
+  http://vdr-portal.de/board/thread.php?threadid=70372. Thanks to
+  hampelratte for noticing.
 
   28 Apr 2008; Matthias Schwarzott <zzam@gentoo.org>
   vdr-osdteletext-0.5.1.ebuild, vdr-osdteletext-0.5.1-r1.ebuild:
