--- a/x11-plugins/epplets/ChangeLog
+++ b/x11-plugins/epplets/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-plugins/epplets
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/epplets/ChangeLog,v 1.12 2008/01/13 00:16:54 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-plugins/cvs-repo/gentoo-x86/x11-plugins/epplets/ChangeLog,v 1.13 2008/06/05 03:54:16 vapier Exp $
+
+*epplets-0.11 (05 Jun 2008)
+
+  05 Jun 2008; Mike Frysinger <vapier@gentoo.org> +epplets-0.11.ebuild:
+  Version bump #224873 by teidakankan.
 
   13 Jan 2008; Mike Frysinger <vapier@gentoo.org> epplets-0.10.ebuild:
   Make sure we DEPEND on pkg-config #205095.
