--- a/x11-libs/pixman/ChangeLog
+++ b/x11-libs/pixman/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/pixman
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/pixman/ChangeLog,v 1.6 2008/06/04 19:53:33 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/pixman/ChangeLog,v 1.7 2008/06/05 11:19:16 armin76 Exp $
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> pixman-0.10.0.ebuild:
+  alpha/ia64/sparc/x86 stable wrt #224929
 
   04 Jun 2008; Markus Rothe <corsair@gentoo.org> pixman-0.10.0.ebuild:
   Stable on ppc64; bug #224929
