--- a/net-misc/nxserver-freeedition/ChangeLog
+++ b/net-misc/nxserver-freeedition/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/nxserver-freeedition
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxserver-freeedition/ChangeLog,v 1.27 2008/05/29 10:30:36 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/nxserver-freeedition/ChangeLog,v 1.28 2008/06/05 15:12:42 pva Exp $
+
+  05 Jun 2008; Peter Volkov <pva@gentoo.org>
+  nxserver-freeedition-3.2.0.ebuild:
+  amd64 stable, bug #222967.
 
   29 May 2008; Christian Faulhammer <opfer@gentoo.org>
   nxserver-freeedition-3.2.0.ebuild:
