--- a/app-text/active-dvi/ChangeLog
+++ b/app-text/active-dvi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/active-dvi
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/active-dvi/ChangeLog,v 1.16 2008/06/05 15:40:22 opfer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/active-dvi/ChangeLog,v 1.17 2008/06/05 15:42:19 opfer Exp $
+
+  05 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
+  active-dvi-1.6.0-r1.ebuild:
+  stable x86, bug 224893
 
   05 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
   active-dvi-1.6.0-r1.ebuild:
