--- a/games-fps/ezquake-bin/ChangeLog
+++ b/games-fps/ezquake-bin/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/ezquake-bin
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/ezquake-bin/ChangeLog,v 1.9 2008/06/04 19:43:14 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-fps/cvs-repo/gentoo-x86/games-fps/ezquake-bin/ChangeLog,v 1.10 2008/06/05 17:02:09 mr_bones_ Exp $
+
+  05 Jun 2008; Michael Sterrett <mr_bones_@gentoo.org>
+  -ezquake-bin-1517.ebuild:
+  clean out old, differently-versioned ebuild
 
 *ezquake-bin-1.9 (04 Jun 2008)
 
