--- a/media-libs/imlib2/ChangeLog
+++ b/media-libs/imlib2/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/imlib2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.69 2008/06/03 14:19:54 beandog Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.70 2008/06/05 18:07:07 dertobi123 Exp $
+
+  05 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  imlib2-1.4.0-r1.ebuild:
+  ppc stable, bug #223965
 
   03 Jun 2008; Steve Dibb <beandog@gentoo.org> imlib2-1.4.0-r1.ebuild:
   amd64 stable, sec bug 223965
