--- a/app-arch/libpar2/ChangeLog
+++ b/app-arch/libpar2/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/libpar2
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/libpar2/ChangeLog,v 1.3 2008/06/04 18:31:54 klausman Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/libpar2/ChangeLog,v 1.4 2008/06/05 18:53:16 dertobi123 Exp $
+
+  05 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org> libpar2-0.2.ebuild:
+  Added ~ppc, bug #224193
 
   04 Jun 2008; Tobias Klausmann <klausman@gentoo.org> libpar2-0.2.ebuild:
   Keyworded on alpha, bug #224193
