--- a/kde-base/kate/ChangeLog
+++ b/kde-base/kate/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kate
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kate/ChangeLog,v 1.109 2008/05/18 15:20:30 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kate/ChangeLog,v 1.110 2008/06/05 21:07:16 keytoaster Exp $
+
+*kate-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +kate-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kate.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kate-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
