--- a/kde-base/kcolorchooser/ChangeLog
+++ b/kde-base/kcolorchooser/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kcolorchooser
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcolorchooser/ChangeLog,v 1.7 2008/05/15 22:55:24 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcolorchooser/ChangeLog,v 1.8 2008/06/05 21:14:34 keytoaster Exp $
+
+*kcolorchooser-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kcolorchooser-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kcolorchooser.
 
 *kcolorchooser-4.0.4 (15 May 2008)
 
