--- a/kde-base/kcontrol/ChangeLog
+++ b/kde-base/kcontrol/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kcontrol
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcontrol/ChangeLog,v 1.118 2008/05/18 21:27:26 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kcontrol/ChangeLog,v 1.119 2008/06/05 21:15:11 keytoaster Exp $
+
+*kcontrol-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kcontrol-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kcontrol.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> kcontrol-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
