--- a/kde-base/kdeartwork-colorschemes/ChangeLog
+++ b/kde-base/kdeartwork-colorschemes/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdeartwork-colorschemes
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-colorschemes/ChangeLog,v 1.7 2008/05/15 23:05:22 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeartwork-colorschemes/ChangeLog,v 1.8 2008/06/05 21:21:26 keytoaster Exp $
+
+*kdeartwork-colorschemes-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdeartwork-colorschemes-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdeartwork-colorschemes.
 
 *kdeartwork-colorschemes-4.0.4 (15 May 2008)
 
