--- a/kde-base/kdesdk-kioslaves/ChangeLog
+++ b/kde-base/kdesdk-kioslaves/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdesdk-kioslaves
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.84 2008/05/18 19:01:22 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-kioslaves/ChangeLog,v 1.85 2008/06/05 21:36:00 keytoaster Exp $
+
+*kdesdk-kioslaves-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kdesdk-kioslaves-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdesdk-kioslaves.
 
   18 May 2008; Markus Meier <maekke@gentoo.org>
   kdesdk-kioslaves-3.5.9.ebuild:
