--- a/kde-base/kdessh/ChangeLog
+++ b/kde-base/kdessh/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdessh
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdessh/Attic/ChangeLog,v 1.8 2008/05/15 23:26:00 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdessh/Attic/ChangeLog,v 1.9 2008/06/05 21:38:06 keytoaster Exp $
+
+*kdessh-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +kdessh-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kdessh.
 
 *kdessh-4.0.4 (15 May 2008)
 
