--- a/kde-base/keditbookmarks/ChangeLog
+++ b/kde-base/keditbookmarks/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/keditbookmarks
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/keditbookmarks/ChangeLog,v 1.7 2008/05/15 23:31:44 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/keditbookmarks/ChangeLog,v 1.8 2008/06/05 21:43:05 keytoaster Exp $
+
+*keditbookmarks-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +keditbookmarks-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of keditbookmarks.
 
 *keditbookmarks-4.0.4 (15 May 2008)
 
