--- a/kde-base/kioclient/ChangeLog
+++ b/kde-base/kioclient/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kioclient
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kioclient/ChangeLog,v 1.7 2008/05/15 23:46:48 ingmar Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kioclient/ChangeLog,v 1.8 2008/06/05 21:52:24 keytoaster Exp $
+
+*kioclient-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org>
+  +kioclient-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of kioclient.
 
 *kioclient-4.0.4 (15 May 2008)
 
