--- a/kde-base/klines/ChangeLog
+++ b/kde-base/klines/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/klines
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klines/ChangeLog,v 1.91 2008/05/18 20:11:28 maekke Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/klines/ChangeLog,v 1.92 2008/06/05 21:55:48 keytoaster Exp $
+
+*klines-4.0.5 (05 Jun 2008)
+
+  05 Jun 2008; Tobias Heinlein <keytoaster@gentoo.org> +klines-4.0.5.ebuild:
+  Added the KDE 4.0.5 version of klines.
 
   18 May 2008; Markus Meier <maekke@gentoo.org> klines-3.5.9.ebuild:
   amd64/x86 stable, bug #221063
